--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         <p class="text-gray-400">Build muscle memory to help you type faster.</p>
       </a>
 
-      <!-- Chim Maze (flappy.html) -->
-      <a href="flappy.html" class="block bg-gray-800/80 backdrop-blur-sm p-6 rounded-lg border border-gray-700 hover:border-cyan-500 transition-all duration-300 ease-in-out transform hover:-translate-y-1 neon-glow-cyan">
+      <!-- Chim Maze (maze.html) -->
+      <a href="maze.html" class="block bg-gray-800/80 backdrop-blur-sm p-6 rounded-lg border border-gray-700 hover:border-cyan-500 transition-all duration-300 ease-in-out transform hover:-translate-y-1 neon-glow-cyan">
         <h2 class="text-2xl font-semibold text-white mb-2">Chim Maze</h2>
-        <p class="text-gray-400">Build muscle memory to aid your tracking.</p>
+        <p class="text-gray-400">Build muscle memory with subjects.</p>
       </a>
 
       <!-- Chim Clinic -->
