--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <div class="card rounded-xl p-6 h-full flex flex-col">
             <div class="mb-6 relative aspect-video overflow-hidden rounded-lg video-container">
               <iframe
-                src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=1&loop=1&playlist=dQw4w9WgXcQ&controls=0&showinfo=0&rel=0&iv_load_policy=3&modestbranding=1"
+                src="https://youtu.be/flDetM2ZwWI"
                 title="Chim Code Video"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
