--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <div class="card rounded-xl p-6 h-full flex flex-col">
             <div class="mb-6 relative aspect-video overflow-hidden rounded-lg video-container">
               <iframe
-                src="https://youtu.be/flDetM2ZwWI"
+                src="<iframe width="560" height="315" src="https://www.youtube.com/embed/flDetM2ZwWI?si=TQ6HoN-VhhvavuYS&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
                 title="Chim Code Video"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
