--- a/index.html
+++ b/index.html
@@ -196,28 +196,32 @@
       <div class="product-slider flex overflow-x-auto snap-x snap-mandatory pb-8 -mx-4 px-4 hide-scrollbar">
 
         <div class="product-slide min-w-full md:min-w-[80%] lg:min-w-[50%] p-3">
-          <div class="card rounded-xl p-6 h-full flex flex-col">
-            <div class="mb-6 relative aspect-video overflow-hidden rounded-lg video-container">
-              <iframe
-                src="<iframe width="560" height="315" src="https://www.youtube.com/embed/flDetM2ZwWI?si=TQ6HoN-VhhvavuYS&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
-                title="Chim Code Video"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen>
-              </iframe>
+            <div class="card rounded-xl p-6 h-full flex flex-col">
+              <div class="mb-6 relative aspect-video overflow-hidden rounded-lg video-container">
+                <iframe
+                  class="absolute top-0 left-0 w-full h-full"
+                  src="https://www.youtube.com/embed/flDetM2ZwWI?si=TQ6HoN-VhhvavuYS&controls=0"
+                  title="Chim Code Video"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen>
+                </iframe>
+              </div>
+              <div class="mb-4 bg-gray-800/70 w-14 h-14 rounded-lg flex items-center justify-center">
+                <i class="fa-solid fa-code card-icon text-2xl text-gray-300"></i>
+              </div>
+              <h2 class="card-title text-2xl font-bold text-white mb-3">Chim Code</h2>
+              <p class="text-gray-400 mb-4 flex-grow">
+                Build muscle memory to help you debug complex systems faster and with higher accuracy.
+              </p>
+              <a href="chimcode.html" class="flex items-center text-cyan-400 text-sm font-medium">
+                <span>Get Started</span>
+                <i class="fa-solid fa-arrow-right ml-2"></i>
+              </a>
             </div>
-            <div class="mb-4 bg-gray-800/70 w-14 h-14 rounded-lg flex items-center justify-center">
-              <i class="fa-solid fa-code card-icon text-2xl text-gray-300"></i>
-            </div>
-            <h2 class="card-title text-2xl font-bold text-white mb-3">Chim Code</h2>
-            <p class="text-gray-400 mb-4 flex-grow">Build muscle memory to help you debug complex systems faster and with higher accuracy.</p>
-            <a href="chimcode.html" class="flex items-center text-cyan-400 text-sm font-medium">
-              <span>Get Started</span>
-              <i class="fa-solid fa-arrow-right ml-2"></i>
-            </a>
           </div>
-        </div>
+          
 
         <div class="product-slide min-w-full md:min-w-[80%] lg:min-w-[50%] p-3">
           <div class="card rounded-xl p-6 h-full flex flex-col">
