--- a/index.html
+++ b/index.html
@@ -200,13 +200,14 @@
               <div class="mb-6 relative aspect-video overflow-hidden rounded-lg video-container">
                 <iframe
                   class="absolute top-0 left-0 w-full h-full"
-                  src="https://www.youtube.com/embed/flDetM2ZwWI?si=TQ6HoN-VhhvavuYS&controls=0"
+                  src="https://www.youtube.com/embed/flDetM2ZwWI?si=TQ6HoN-VhhvavuYS&controls=0&autoplay=1&rel=0&loop=1&playlist=flDetM2ZwWI"
                   title="Chim Code Video"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allow="autoplay"
                   referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen>
-                </iframe>
+                  allowfullscreen
+                ></iframe>
               </div>
               <div class="mb-4 bg-gray-800/70 w-14 h-14 rounded-lg flex items-center justify-center">
                 <i class="fa-solid fa-code card-icon text-2xl text-gray-300"></i>
@@ -220,7 +221,7 @@
                 <i class="fa-solid fa-arrow-right ml-2"></i>
               </a>
             </div>
-          </div>
+          </div>          
           
 
         <div class="product-slide min-w-full md:min-w-[80%] lg:min-w-[50%] p-3">
