--- a/billing.html
+++ b/billing.html
@@ -337,7 +337,7 @@
             </tr>
              <tr>
               <td>2025-05-05</td>
-              <td>Get What's New? (fs v0.5)</td>
+              <td>Upgrade ? (fs v0.5)</td>
               <td>$2.49</td>
               <td class="status-pending">Pending</td>
               <td><button class="download-button" data-invoice-id="inv-004" disabled><i class="fas fa-download"></i>PDF</button></td>
@@ -383,7 +383,7 @@
     <section id="refund-request" class="content-section w-full px-4 sm:px-6">
       <h2 class="section-title">Request Refund</h2>
       <form id="refund-form" class="refund-form">
-        <p class="text-gray-400 mb-6 text-sm">If you need a refund for a recent charge (e.g., Cheat Code, Get What's New), please fill out the form below. Note: Membership fees are generally non-refundable after cancellation unless required by law. Please allow 3-5 business days for processing.</p>
+        <p class="text-gray-400 mb-6 text-sm">If you need a refund for a recent charge (e.g., Cheat Code, Upgrade), please fill out the form below. Note: Membership fees are generally non-refundable after cancellation unless required by law. Please allow 3-5 business days for processing.</p>
         <div class="form-group">
           <label for="refund-email">Your Account Email</label>
           <input type="email" id="refund-email" name="email" required placeholder="you@example.com">
