--- a/support.html
+++ b/support.html
@@ -283,7 +283,7 @@
           </summary>
           <div class="faq-answer">
             <p>The fs Membership provides monthly access to premium features across all Fromsupply products you've 'gotten'. This includes advanced analytics in Chim Code, personalized training modules in Chim Type, exclusive environments in Chim Maze, priority support in Chim Clinic, and more. It's the best way to experience the full power of Fromsupply.</p>
-             <p>Note: The "Get What's New?" purchase is separate and covers major version updates and new feature bundles released periodically.</p>
+             <p>Note: The "Upgrade ?" purchase is separate and covers major version updates and new feature bundles released periodically.</p>
           </div>
         </details>
         <details>
@@ -323,7 +323,7 @@
           </summary>
           <div class="faq-answer">
             <p>Minor updates and bug fixes within the current major version (e.g., v0.5.x) are generally included for free for anyone who has 'gotten' the product or has an active membership.</p>
-            <p>Major version upgrades (e.g., moving from v0.x to v1.x) that introduce significant new features or architectural changes may be included in the "Get What's New?" bundle, which is a separate purchase available to users who have purchased at least one 'Max' product previously.</p>
+            <p>Major version upgrades (e.g., moving from v0.x to v1.x) that introduce significant new features or architectural changes may be included in the "Upgrade ?" bundle, which is a separate purchase available to users who have purchased at least one 'Max' product previously.</p>
           </div>
         </details>
         <details>
